# game.libretro.pcem

./: .gitconfig  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/pcem/: 01-inline.patch  02-settings.patch  CMakeLists.txt  pcem.txt
game.libretro.pcem/: addon.xml  addon.xml.in
game.libretro.pcem/resources/: settings.xml
game.libretro.pcem/resources/language/English/: strings.po
